<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userFormLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp" >

        <ImageView
            android:id="@+id/nameImageView"
            android:src="@drawable/ic_person"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:hint="@string/user_form_name"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textCursorDrawable="@null"
            android:inputType="textCapSentences"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/surnameImageView"
            android:src="@drawable/ic_group"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <EditText
            android:id="@+id/surnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:hint="@string/user_form_surname"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textCursorDrawable="@null"
            android:inputType="textCapSentences"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp">

        <ImageView
            android:id="@+id/emailImageView"
            android:src="@drawable/ic_email"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:hint="@string/user_form_email"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textCursorDrawable="@null"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

</LinearLayout>
