<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerBalance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <include layout="@layout/toolbar"/>

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/instructionButton"
                            android:text="@string/button_instructions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/button_about_padding"
                            android:minHeight="60dp"
                            android:layout_marginLeft="@dimen/button_about_margin_h"
                            android:layout_marginRight="@dimen/button_about_margin_h"
                            android:layout_marginTop="@dimen/button_about_margin_v"
                            android:textSize="@dimen/text_middle"
                            android:textColor="@color/colorWhite"
                            android:drawableLeft="@drawable/ic_info_outline"
                            android:theme="@style/PrimaryButton" />

                        <Button
                            android:id="@+id/videoButton"
                            android:text="@string/button_video"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/button_about_padding"
                            android:minHeight="60dp"
                            android:layout_marginLeft="@dimen/button_about_margin_h"
                            android:layout_marginRight="@dimen/button_about_margin_h"
                            android:layout_marginTop="@dimen/button_about_margin_v"
                            android:textSize="@dimen/text_middle"
                            android:textColor="@color/colorWhite"
                            android:drawableLeft="@mipmap/ic_youtube"
                            android:theme="@style/YoutubeButton" />

                        <Button
                            android:id="@+id/emailButton"
                            android:text="@string/button_mail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/button_about_padding"
                            android:minHeight="60dp"
                            android:layout_marginLeft="@dimen/button_about_margin_h"
                            android:layout_marginRight="@dimen/button_about_margin_h"
                            android:layout_marginTop="@dimen/button_about_margin_v"
                            android:textSize="@dimen/text_middle"
                            android:textColor="@color/colorWhite"
                            android:drawableLeft="@drawable/ic_email"
                            android:theme="@style/PrimaryButton" />

                        <Button
                            android:id="@+id/vkPublicButton"
                            android:text="@string/button_vk"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/button_about_padding"
                            android:minHeight="60dp"
                            android:layout_marginLeft="@dimen/button_about_margin_h"
                            android:layout_marginRight="@dimen/button_about_margin_h"
                            android:layout_marginTop="@dimen/button_about_margin_v"
                            android:textSize="@dimen/text_middle"
                            android:textColor="@color/colorWhite"
                            android:drawableLeft="@mipmap/ic_vk"
                            android:theme="@style/VKButton" />

                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include layout="@layout/navigation_view"/>

</androidx.drawerlayout.widget.DrawerLayout>
